Pt1 Table: compare two project (#1663)
* Pt1 Table: compare two project

* Fix Unittest

* Fix

* Fix exception und typo

* Improve CompareTableCellContent

* Update constant name

* Fix exception und clean session by close